# vps-deployment

./: .dockerignore  .env.template  .gitignore  Dockerfile  compose.override.yml  compose.prod.yml  compose.yml  justfile  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: cd.yml  ci.yml
src/app/: __init__.py
src/app/application/: exceptions.py  note.py
src/app/application/ports/: notes.py
src/app/domain/: note.py
src/app/infrastructure/: notes.py
src/app/interface/: dependencies.py  schemas.py
src/app/interface/api/: main.py
src/app/interface/api/routers/: notes.py
