[project]
name = "app"
version = "0.1.0"
description = "Notes API with clean architecture"
readme = "README.md"
authors = [{ name = "jeremyarancio", email = "jeremyarancio@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
